--- a/src/index.css
+++ b/src/index.css
@@ -62,11 +62,11 @@ body {
   background: #292a2d;
 }
 ::-webkit-scrollbar-thumb {
-  background: #E3405F;
+  background: #0E52FF;
   border-radius: 5px;
 }
 ::-webkit-scrollbar-thumb:hover {
-  background: #E3405F;
+  background: #0E52FF;
 }
 /* Media Query */
 @media (max-width: 1380px) {
