--- a/src/components/certificationCard/CertificationCard.css
+++ b/src/components/certificationCard/CertificationCard.css
@@ -18,7 +18,9 @@
 .logo_img {
   margin: 3px;
   width: auto;
-  height: 100px;
+  height: 50%;
+  max-height: 150px;
+  border-radius: 5%;
 }
 
 .cert-body {
